# snap-info

./: pyproject.toml  requirements.txt  ukuzama-snap-info_0.1_amd64.snap
snap/: snapcraft.yaml
snap_info/: __init__.py
